# PandaMat

./: gulpfile.js  index.js  package.json
client/: bower.json  index.html
client/bower_components/backbone-localstorage/: .bower.json
client/bower_components/backbone-relational/: .bower.json
client/bower_components/backbone.marionette/: .bower.json
client/bower_components/d3/: .bower.json
client/bower_components/jscolor/: jscolor.js
client/bower_components/pandamat/: pandamat.js
client/bower_components/pandamat_Release/: pandamat.js
client/css/: body.less  font-awesome.css  projection.less  structure.less  style.less  submap.less  variables.less
client/css/fonts/: icomoon.eot  iconfont.eot
client/data/: 2DPlanes.csv  2DPlanes.csv~  3DBall.csv  C2.csv  Iris.csv  SimulationsPlus_descriptors-normalization-withLabel - C2.csv  abalone.csv  breast.csv  cortex.csv  food.csv  movement.csv  music.csv  serum.csv  serum_origin.csv  swissroll.csv  swissroll.csv~  synthetic.csv  synthetic_saved.csv  wine.csv
client/js/: app.js  main.js
client/js/collections/: projection_Collection.js  submap_Collection.js
client/js/controls/: controller.js  router.js
client/js/libs/: KNNG.js  basicFunctions.js  mds.js
client/js/models/: communicator.model.js  config.model.js  data.model.js  datacenter.model.js
client/js/views/: .suble46.tmp  app.view.js  base.view.js
client/templates/: app.tpl
server/: logger.js  server.js
server/c_modules/: c_loader.js
server/c_modules/pandamat/: add.cc  add.h  addon.cc  binding.gyp  binding_server.gyp  (+13 more)
server/c_modules/pandamat/src/FocusChanger/: CMakeLists.txt  coordinatews.cc  coordinatews.h  getcoordinates.cc  getcoordinates.h
server/c_modules/pandamat/src/pm_Common/: CMakeLists.txt  add.cc  add.h  coordinate.cc  coordinate.h  coordstransform.cc  coordstransform.h  dot.cc  dot.h  kmeans.cc  kmeans.h  knngraph.cc  knngraph.h  mds.cc  mds.h  multiply.cc  multiply.h  projection.cc  projection.h  sqrtdist.cc  sqrtdist.h  subspace.cc  subspace.h  transpose.cc
server/c_modules/pandamat/src/pm_Library/: CMakeLists.txt
server/c_modules/pandamat/src/pm_Library/basic/: operation.cc  operation.h  operationdata.cc  operationdata.h  pbasics.cc  pbasics.h
server/c_modules/pandamat/src/pm_Library/lda/: lda.cpp  lda.h
server/computation/: computation.js
server/database/: database.js
server/handler/: handler.js
server/router/: router.js
server/stream/: stream.js
(+27 files in other folders)
